src/test/deca/syntax/valid/expr_mult_chain.deca
{
    println(1 * 2 / 3 % 4);
    println(100 / 10 / 1);
}
