src/test/deca/syntax/invalid/if_sans_par.deca

//Erreur : parenthèses manquantes

{
    if (1<2  {
        println("ok");
    }
}